# collective-music-taste-website

./: LICENSE  README.md  app.py  pyproject.toml
templates/: base.html  home.html  login.html  main.html  navbar.html  rating.html  signup.html  stats.html
